Final touch, Overhaul login and register icon, fixed bug, added custom scrollbar, added icon for register login your profile and logout, linked every button to the right place

--- a/profile.css
+++ b/profile.css
@@ -1,3 +1,20 @@
+body::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #6c10ff;
+  border-radius: 1em;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
